# agents-ai

./: README.md
exam_ai/: README.md  eleve1.md  eleve2.md  prof.md  pyproject.toml  requirements.txt
exam_ai/src/exam_ai/: crew.py  main.py
exam_ai/src/exam_ai/config/: agents.yaml  tasks.yaml
kube_invest_ai/: Dockerfile  README.md  pyproject.toml  report.md  requirements.txt
kube_invest_ai/deployment/: deploy.yaml  test_fake_incident.yaml
kube_invest_ai/src/kube_invest_ai/: crew.py  main.py
kube_invest_ai/src/kube_invest_ai/config/: agents.yaml  tasks.yaml
kube_invest_ai/src/kube_invest_ai/tools/: custom_tool.py
