[project]
name = "exam_ai"
version = "0.1.0"
description = "exam-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
exam_ai = "exam_ai.main:run"
run_crew = "exam_ai.main:run"
train = "exam_ai.main:train"
replay = "exam_ai.main:replay"
test = "exam_ai.main:test"
run_with_trigger = "exam_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
