[project]
name = "kube_invest_ai"
version = "0.1.0"
description = "kube_invest_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
kube_invest_ai = "kube_invest_ai.main:run"
run_crew = "kube_invest_ai.main:run"
train = "kube_invest_ai.main:train"
replay = "kube_invest_ai.main:replay"
test = "kube_invest_ai.main:test"
run_with_trigger = "kube_invest_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
